[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/shell dummy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Shell.gd" type="Script" id=2]
[ext_resource path="res://Sounds/tinkle.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.5
height = 5.0

[node name="Shell" type="RigidBody2D" groups=["CanSplash"]]
collision_layer = 2
collision_mask = 2
contacts_reported = 5
contact_monitor = true
script = ExtResource( 2 )
ejectForce = -200.0

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="DEATHTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="PingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0
attenuation = 2.14355
bus = "Shells"

[connection signal="body_entered" from="." to="." method="_on_Shell_body_entered"]
[connection signal="timeout" from="DEATHTimer" to="." method="_on_DEATHTimer_timeout"]
